# forme-studio

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  main.py
backend/app/models/: __init__.py  asset.py  audit.py  product_type.py  workspace.py
backend/app/modules/: __init__.py
backend/app/modules/packaging/: __init__.py  presets.py  routes.py  schemas.py
backend/app/routes/: __init__.py  health.py  settings.py
backend/app/services/: __init__.py  analyze.py  assets.py  audit.py  bg_removal.py  compose.py  export_cdr.py  export_pdf.py  export_psd.py  filesystem.py  image_normalize.py  ocr.py  openai_image.py  pricing.py  product_types.py  segmentation.py  vector.py  vision.py
backend/assets/fonts/: .keep
backend/tests/: conftest.py  stubs.py  test_analyze.py  test_bg_removal.py  test_compose.py  test_db_migration.py  test_delete_workspace.py  test_design_flatten.py  test_edit.py  test_export_cdr.py  test_export_pdf.py  test_export_psd.py  test_export_psd_tiers.py  test_export_vector.py  test_filesystem.py  test_generate.py  test_health.py  test_image_normalize.py  test_pricing.py  test_product_types.py  test_references.py  test_segmentation_sam3.py  test_settings.py  test_workspaces.py
docs/: ARCHITECTURE.md  DESIGN_GUIDE.md  SAM_UPGRADE.md  SETUP_KEYS.md  USER_GUIDE.md
frontend/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  ComposeDialog.tsx  CreateWorkspaceForm.tsx  (+7 more)
(+12 files in other folders)
