[project]
name = "forme-studio-backend"
version = "0.1.0"
description = "Forme Studio — FastAPI backend for AI-assisted packaging & print design."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "openai>=1.54.0",
    "pillow>=11.0.0",
    "psd-tools>=1.10.0",
    "replicate>=0.34.0",
    "pytesseract>=0.3.13",
    "reportlab>=4.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# E501  — line length handled by the formatter
# B008  — FastAPI's `Depends()` pattern is intentional in defaults
# RUF002/RUF003 — `×` is the correct character for print dimensions (70 × 100 mm)
ignore = ["E501", "B008", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libs without type stubs we shell out to.
module = [
    "pytesseract",
    "pytesseract.*",
    "replicate",
    "replicate.*",
    "reportlab",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
